updated all the files

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,19 +3,10 @@ server {
     server_name localhost;
 
     
-    
+    root /usr/share/nginx/html;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
+        index index.html index.htm;
         try_files $uri $uri/ /index.html;
-    }
-
-    location /aimhub/ {
-        proxy_pass http://localhost:3001/aimhub/;
-    }
-
-    location /ft/ {
-        proxy_pass http://localhost:3002/ft/;
     }
 }
